--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
     - build
 
 build:
+    stage: build
     image: node:lts
     script:
         - npm i -g testfairy-unity-asset-packager
