Added meta files back and unitypackage generator works now

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,14 +6,9 @@ build:
     image: node:lts
     script:
         - npm i -g testfairy-unity-asset-packager
-
-        - mkdir -p .Assets/Editor/TivoliAvatarExporter
-        - mv * .Assets/Editor/TivoliAvatarExporter
-        - mv .Assets Assets
-
         - testfairy-unity-asset-packager
           -o TivoliAvatarExporter.unitypackage
-          Assets
+          -p Assets/Editor/TivoliAvatarExporter .
     artifacts:
         expire_in: 1 day
         paths:
