--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,6 @@ release:
     extends: .release
     script:
         - release-cli create
-          --name="Tivoli Avatar Exporter"
-          --description="Version $CI_COMMIT_TAG"
+          --name="Tivoli Avatar Exporter $CI_COMMIT_TAG"
           --assets-links-name "$FILE_NAME"
-          --assets-links-url "$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_SHA/raw/$FILE_NAME?job=build"
+          --assets-links-url "$CI_PROJECT_URL/-/jobs/artifacts/$CI_COMMIT_SHORT_SHA/raw/$FILE_NAME?job=build"
